# edge

./: .gitignore  API_CLIPS.md  API_COMPLETE.md  API_TODO.md  CLAUDE.md  CMakeLists.txt  CPU_FIX_RESULTS.md  DOCKER_CLIP_TEST_RESULTS.md  Dockerfile  IMPLEMENTATION_STATUS.md  K8S_DEPLOYMENT_SUMMARY.md  Makefile  PHASE2_IMPLEMENTATION.md  README.md  README_API.md  README_PHASE2.md  SECURITY_REVIEW.md  SPS_PPS_FIX.md  TODO.md  edge-motion-detector-phase2-spec.md  edge-motion-detector-spec.md  go.mod  go.work
cmd/emd-agent/: main.go
components/autotune/: README.md  go.mod  go.sum
components/autotune/cmd/cvkit-autotune/: main.go
components/autotune/cmd/cvkit-postproc/: main.go
components/autotune/configs/: postproc.toml.example  tuner.yaml.example
components/autotune/docs/: spec.md
components/autotune/pkg/edge/: client.go  config.go  events.go  nats_scan.go
components/autotune/pkg/nats/: client.go  schema.go
components/autotune/pkg/obs/: log.go  metrics.go
components/autotune/pkg/postproc/: filters.go  pipeline.go  stage.go
components/autotune/pkg/tuner/: confusion.go  grid.go  plan.go
components/emd/: .env.example  CMakeLists.txt  Dockerfile  go.mod  go.sum  test_api.sh
components/emd/cmd/emd-agent/: main.go
components/emd/configs/: axis_p4708.toml
components/emd/include/emd/: agent_abi.h  config.h  event.h  h265_depay.h  inspector.h  log.h  metrics.h  recorder.h  ringbuf.h
components/emd/internal/agent/: agent.go  config.go  disk.go  recorder.go  supervisor.go  testing.go
components/emd/internal/api/: clips_test.go  handler.go  openapi.go
components/emd/internal/eventlog/: log.go
components/emd/internal/libemd/: bindings.go  callbacks.go  camera.go  log.go
components/emd/internal/nats/: publisher.go
components/emd/k8s/: agent.toml  camera_list.txt  camera_list.txt.example  create-secrets.sh  deployment.yaml
components/emd/scripts/: allcam_report.sh  generate_config.py  local_test.sh  run_tests.sh  test_axis_camera.sh
components/emd/src/: emd_cam.c  emd_config.c  emd_event.c  emd_h264_depay.c  emd_h265_depay.c  emd_inspector.c  emd_metrics.c  emd_mqtt.c  emd_recorder.c  emd_ringbuf.c  emd_rtp.c  emd_supervisor.c
components/emd/tests/: test_config.c  test_event_bus.c  test_h264_depay.c  test_h264_parse.c  test_h265_depay.c  test_h265_parse.c  test_mqtt.c
components/emd/tests/fixtures/: axis_81_7_20260516_025539_01KRQBBZ_fixture.json  axis_82_2_20260516_025611_01KRQBCY_fixture.json
components/postprocess/: Dockerfile  go.mod
components/postprocess/cmd/postprocess/: main.go
components/postprocess/configs/: postprocess.toml.example
components/postprocess/pkg/pipeline/: pipeline.go
components/postprocess/pkg/s3/: uploader.go
configs/: axis_p4708.toml
deploy/docker/: docker-compose.yml
deploy/docker/configs/emd/: agent.toml
deploy/k8s/: kustomization.yaml
deploy/k8s/autotune/: deployment.yaml
deploy/k8s/emd/: deployment.yaml
deploy/k8s/nats/: nats.yaml
deploy/k8s/postprocess/: deployment.yaml
docs/architecture/: auto-tune-design.md  emd-mb-parse-spec.md  emd-tuning-reporting-spec.md  security-review.md  timestamp-normalization.md
docs/archive/: CPU_PROFILING_ANALYSIS.md  FALSE_POSITIVE_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FINDINGS.md  VIDEO_FILE_TEST_SUMMARY.md
docs/deployment/: build-and-deploy.md  deploy-local.md
include/emd/: agent_abi.h  h265_parse.h  mqtt.h  net.h  rtsp.h  supervisor.h
internal/agent/: agent.go  config.go  disk_test.go  recorder.go  supervisor.go
internal/api/: docs_test.go  handler.go  handler_test.go  openapi.go
internal/health/: handler.go  handler_test.go
internal/libemd/: bindings.go  callbacks.go  camera.go
internal/metrics/: metrics.go
k8s/: BUILD_AND_DEPLOY.md  RESOURCE_ANALYSIS.md  agent.toml.example  deploy-complete.sh  deploy-kubectl.sh  deploy.sh  deployment.yaml  load-image.sh  port-forward.sh
scripts/: discover_axis_cameras.sh  e2e_test.sh  generate_config.py  generate_fixtures.sh  test_axis_camera.sh  test_video_file.sh
src/: emd_cam.c  emd_config.c  emd_h264_parse.c  emd_h265_parse.c  emd_log.c  emd_mux_fmp4.c  emd_mux_mpegts.c  emd_net.c  emd_rtsp.c  emd_supervisor.c  main.c
tests/: CMakeLists.txt  create_clip_fixtures.sh  test_inspector_gradual.c  test_inspector_motion.c  test_recorder_mp4.c  test_ringbuf.c  validate_clips.sh
tests/fixtures/: axis_82_2_20260516_025631_01KRQBDJ_fixture.json  axis_82_2_20260516_025634_01KRQBDM_fixture.json  emd_e2e.toml  reference_clip.json
tests/integration/: e2e_test.py  fake_rtsp_server.py
